Fix: updated logo size and removed horizontal scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -119,6 +119,8 @@
 
 html {
   scroll-behavior: smooth;
+  scrollbar-gutter: stable;
+  overflow-x: hidden;
 }
 
 .color {
